This file documents the revision history for the Monitoring Webinterface Thruk.

next
          - add status column to performance map excel export
          - fix 'bad file descriptor' error when trying to log in subprocesses
          - Config Tool:
            - fix encodig when raw editing files (#572)
          - Panorama View:
            - fix background image offset not working properly
            - fix mixed up label offset x/y

2.06     Wed Mar 02 16:08:00 CET 2016
          - make custom variables from show_custom_vars clickable
          - add eventhandler search option
          - add core scheduling graph page
            - add fix_scheduling cli command
          - set default graph from _GRAPH_SOURCE custom variable
          - fix sending commands to all backends (#555)
          - fix vertical header in Minemap for recent firefox
          - fix graphite integration (#557)
          - add generic grapher replace setting 'graph_replace'
          - Panorama View:
            - add hide legend / graph only checkbox for pnp panel
            - add new appearance type 'label only'
            - add export/import to files including images
            - add emoji icon set
            - fix sending reschedule commands
            - fix not triggering upload popup
          - Reports:
            - keep reports during updates (#546)
          - Config Tool:
            - show message if unsaved changes would be lost
            - fix user password change (marcantoinedupre)

2.04     Thu Nov 12 10:32:27 CET 2015
          - add json export to process info page
          - fix problem with removing reports when trying to save files on a full disk.
          - fix "show link" not displaying the hostname
          - support host custom variables in services via show_custom_vars
          - Config Tool:
            - add reference clone selection page
          - Panorama View:
            - add clean dashboards button in dashboard management all tab