@@ -2895,6 +2895,9 @@ sub _add_misc_details {
         $c->stats->profile(begin => "_add_misc_details");
         _add_json_dashboard_timestamps($c, $json);
         _add_json_pi_detail($c, $json);
+        $json->{'server_version'}       = $c->config->{'version'};
+        $json->{'server_version'}      .= '~'.$c->config->{'branch'} if $c->config->{'branch'};
+        $json->{'server_extra_version'} = $c->config->{'extra_version'};
         $c->stats->profile(end => "_add_misc_details");
     }
     return;
